fixed a lot of findbugs warnings